"""Modelo de usuário - Modelo ORM do SQLAlchemy para tabela de usuários"""
from sqlalchemy import Column, Integer, String, DateTime, Boolean
from sqlalchemy.sql import func
from app.db.database import Base
from app.db.encryption_models import EncryptedString


class Usuario(Base):
    """Modelo de usuário para banco de dados"""
    __tablename__ = "usuarios"

    id = Column(Integer, primary_key=True, index=True)
    email = Column("email_encrypted", EncryptedString(255), nullable=False)  # Mapeia para coluna email_encrypted, encriptada
    email_hash = Column(String(64), nullable=False, index=True)  # Para buscas rápidas
    username = Column(String(100), unique=True, index=True, nullable=False)
    senha_hash = Column(String(255), nullable=False)
    role = Column(String(20), nullable=False, default="caixa")
    ativo = Column(Boolean, default=True)
    data_criacao = Column(DateTime(timezone=True), server_default=func.now())
    data_atualizacao = Column(
        DateTime(timezone=True),
        server_default=func.now(),
        onupdate=func.now()
    )

    def __repr__(self):
        return f"<Usuario(id={self.id}, email={self.email}, nome_usuario={self.username})>"
